Corrected scrollbar position in motif list

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -690,7 +690,7 @@ body {
 }
 
 #motif-list {
-  max-height: 24.92rem;
+  max-height: 25.42rem;
   overflow-y: scroll;
   /*-ms-overflow-style: none;
   scrollbar-width: none;
